2019-02-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Makefile.common.in,
	  Makefile.in,
	  configure,
	  configure.ac,
	  sdccconf_in.h,
	  src/pdk/main.c,
	  sdas/aspdk15:
	  pdk15 assembler, patch by Nicolas Lesser.

2019-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  Makefile.in,
	  configure,
	  configure.ac,
	  doc/sdccman.lyx:
	  Remove sdcclib.
	* sim/ucsim/sim.src/var.cc,
	  sim/ucsim/sim.src/varcl.h,
	  sim/ucsim/stm8.src/glob.cc,
	  sim/ucsim/stm8.src/stm8.cc:
	  stm8 simulator fixes, patches by Mike Jagdis.

2019-02-07 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk14,
	  sdas/aspdk,
	  device/lib/pdk14/Makefile.in:
	  Assembler refactoring, patch by Nicolas Lesser.

2019-02-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/gen.h,
	  src/pdk/ralloc.c,
	  src/pdk/ralloc2.cc,
	  src/pdk/gen.c:
	  Various improvements in register allocation.
	* sdas/linksrc/lkrloc3.c:
	  Fix a linker issue, patch by Nicolas Lesser.
	* device/lib/pdk14/__gptrget.s:
	  Fix an issue in read from pointer to ROM.

2019-02-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/ralloc.c,
	  src/pdk/gen.c:
	  Rematerialization.

2019-02-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix direct read from variable in code space.

2019-02-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Implement write of non-literal to bit-field.

2019-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Implement read from bit-field, literal write to bit-field.
	* src/pdk/ralloc2.cc:
	  Improve handling of p wrt. pointer read / write in register allocation.

2019-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix signed comparison by 0.
	* Makefile.in,
	  configure,
	  configure.ac,
	  src/pdk/main.c,
	  sdas/aspdk,
	  sdas/aspdk14: